Improve flatten statements helper and fix bugs
* FlattenStatementsHelper cleanup

* split "if", "switch" and "synchronized" from "root" and "sequence"

* Remove some dead code

* Add comments

* Fix import of moved class

* Initial flatten statements helper refactor and finally processing improvements

* Fix and simplify wrong assumption

* Update wrong test result to different wrong test result

* Make ssau aware of the new finally representation

* Final cleanup of FlattenStatementsHelper

until plugins come along ...

* A bit more FSH cleanup wrt infinite loops

* Cleanup some things left over from te refactor

* The tests seem to work :-?

* Address review comments

* Address review comments 2

* Address review comments 3

Co-authored-by: SuperCoder79 <25208576+SuperCoder7979@users.noreply.github.com>